# dumbgpt

./: .gitignore  CLAUDE.md  README.md  bun.lockb  eval.py  main.py  package.json  pyproject.toml  train.py  train_model.py  train_pytorch.py  trained-model.json
src/: code-model.ts  index.ts  run.ts  smart-completion.ts  text-model.ts  train.ts  tui.tsx
src/core/: cli.ts  generator.ts  markov.ts
src/dumbgpt/: __init__.py  download_dataset.py  eval.py  train.py
src/dumbgpt/model/: __init__.py  attention.py  layers.py  transformer.py
src/dumbgpt/tokenizer/: tiktoken_tokenizer.py  tokenizer.py
src/dumbgpt/training/: dataloader.py  optimizer.py  trainer.py  utils.py
src/dumbgpt/tui/: README.md  __init__.py  app.css  app.py
src/models/: gpt-model.ts  index.ts
src/models/gpt/: attention.ts  tensor.ts  tokenizer.ts  transformer.ts
src/tokenizers/: code.ts  javascript.ts  text.ts
src/ui/: App.tsx  ChatArea.tsx  InputArea.tsx  TrainingProgress.tsx  theme.ts
src/ui/hooks/: useInputHistory.ts
tests/: gpt.test.ts  test_attention.py  test_layers.py  test_tokenizer.py  test_training.py  test_transformer.py
