[project]
name = "dumbgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "rich>=14.1.0",
    "textual>=6.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
