[project]
name = "dumbgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pytorch-triton-xpu>=3.4.0",
    "rich>=14.1.0",
    "textual>=6.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
]

[project.scripts]
tui = "dumbgpt.tui.app:main"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [{ index = "pytorch-xpu" }]
pytorch-triton-xpu = [{ index = "pytorch-xpu" }]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
